add the 404.html file

--- a/django/Basics/myFirstProject/templates/result.html
+++ b/django/Basics/myFirstProject/templates/result.html
@@ -2,4 +2,7 @@
 {% extends 'base.html' %}
 
 <!--inside the base files block content we need to include the following-->
-{%block content%} Result : {{ans}} {%endblock%}
+{%block content%}
+<center>
+    <h3>Result : {{ans}}</h3>
+</center> {%endblock%}
