--- a/django/Basics/myFirstProject/templates/home.html
+++ b/django/Basics/myFirstProject/templates/home.html
@@ -4,12 +4,19 @@
 <!--inside the base files block content we need to include the following-->
 {%block content%}
 
-<h1>Hello {{first_name}} {{last_name}}!</h1>
+<center>
+    <h1>Hello {{first_name}} {{last_name}}!</h1>
 
-<form action="add" method="post">
-    <!--inorder to avoid csrf attack-->
-    {% csrf_token %} Enter first number: <input type="text" name="num1"><br> Enter second number: <input type="text" name="num2"><br>
-    <input type="submit">
-</form>
+    <form action="add" method="post">
+        <!--inorder to avoid csrf attack-->
+        {% csrf_token %} Enter first number: <input type="text" name="num1"><br> Enter second number: <input type="text" name="num2"><br>
+        <input type="submit" value="Add">
+    </form>
 
+    <form action="404" method="post">
+        <!--inorder to avoid csrf attack-->
+        {% csrf_token %}
+        <input type="submit" value="Error404">
+    </form>
+</center>
 {%endblock%}
